[package]
name = "asa-wrap"
description = "Dedicated server wrapper for ARK: Survival Ascended"
license = "MIT"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
repository = "https://github.com/conqp/asa-wrap"
keywords = ["ARK", "server", "wrapper"]
categories = ["command-line-utilities"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
env_logger = "0.10.0"
ini = "1.3.0"
log = "0.4.20"
