[package]
name = "asa-wrap"
description = "Dedicated server wrapper for ARK: Survival Ascended"
license = "MIT"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
repository = "https://github.com/conqp/asa-wrap"
keywords = ["ARK", "server", "wrapper"]
categories = ["command-line-utilities"]
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
rust-ini = "0.21"
log = "0.4"
